--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <div class="w3-main" style="margin-left:250px">
   <div class="w3-row w3-padding-64">
     <div id="reactPane"></div>
+    <form enctype="multipart/form-data" action="/upload" method="post">
+      <input type="file" name="photo" multiple />
+      <input type="submit" value="Upload Image" name="submit" />
+    </form>
   </div>
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
